# Fast-Neural-Network

./: Cargo.toml  README.md  network.json  temp
benches/: default-bench.rs  parallel_vs_sequential.rs
src/: activation.rs  lib.rs  main.rs  matrix.rs  neural_network.rs
