[package]
name = "fast-neural-network"
version = "0.2.0"
edition = "2021"
authors = ["AbduEhab <abdu.ehab0@gmail.com>"]
description = "A heavily parallelized neural network library designed for speed and flexability."
readme = "README.md"
repository = "https://github.com/AbduEhab/Fast-Neural-Network"
license-file = "LICENSE.txt"
keywords = [
    "machine_learning",
    "neural_network",
    "AI",
    "parallel",
    "data-science",
]
exclude = ["benches/Results"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
strip = true

# Enable only a small amount of optimization in debug mode
[profile.dev]
# opt-level = 1

[profile.release]
strip = true
lto = "fat"
opt-level = 3

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "parallel_vs_sequential"
harness = false
