[package]
name = "fast-neural-network"
version = "0.7.0"
edition = "2021"
authors = ["AbduEhab <abdu.ehab0@gmail.com>"]
description = "A heavily parallelized neural network library designed for speed and flexability."
readme = "README.md"
repository = "https://github.com/AbduEhab/Fast-Neural-Network"
license = "GPL-2.0"
keywords = [
    "machine_learning",
    "neural_network",
    "AI",
    "parallel",
    "data-science",
]
exclude = ["benches/Results"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
strip = true

# Enable no amount of optimization in debug mode
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = "fat"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rayon = "1.10.0"
ndarray = { version = "0.16.1", features = ["serde", "rayon", "matrixmultiply-threading"] }
indicatif = {version = "0.17.8", features = ["rayon"]}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "default-bench"
harness = false
